# astar-sh

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts
.astar/overtime/: e-agent-signoff.md  overtime-monitor.md  session-auth.md  subtask-counting.md  task-visibility.md
.claude/: settings.json
.lovable/: plan.md
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.tsx  QuickCapture.tsx  api.ts  auth.ts  keybinds.ts  main.tsx  quick.css  store.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs
cli/: install.sh  package.json
cli/src/: index.ts
src/: App.tsx  index.css
src/components/: AstarLogo.tsx  CrypticLanding.tsx  Layout.tsx  LeaderboardTable.tsx  ProtectedRoute.tsx  PublicDashboard.tsx  ShippedCalendar.tsx  StaffWorkspace.tsx
src/contexts/: AuthContext.tsx
src/lib/: sanity.ts
src/pages/: About.tsx  Admin.tsx  Docs.tsx  Index.tsx  Login.tsx  Research.tsx  Updates.tsx
src/test/: subtask-mine-list.test.ts  task-visibility.test.ts
supabase/: config.toml
supabase/migrations/: 20260326144416_c6af33a7-3960-4781-8175-365ddebaf487.sql  20260326170032_a2ba354c-d3e1-4895-9508-f4e205e4cea4.sql  20260328123548_c4ecac97-6394-4655-a14f-c9d59b390d9f.sql  20260328125807_a21321fc-69a4-4549-8701-14f9597adeb8.sql  20260330111101_1c24766a-2518-40c7-97f0-50bb63e7038b.sql  (+44 more)
wiki/: index.md
wiki/cli/: README.md
(+70 files in other folders)
