[package]
name = "astar-desktop"
version = "0.0.1"
description = "astar desktop — task UI wired to skills-api"
authors = ["Erik Bohne"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "astar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-http = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
